--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expres": "^0.0.5",
     "express-graphql": "^0.12.0",
     "graphql": "^15.9.0",
+    "graphql-date": "^1.0.3",
     "html-webpack-plugin": "^5.6.0",
     "lodash": "^4.17.21",
     "nodemon": "^3.1.4",
