--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@apollo/client": "^3.10.8",
     "apollo-client": "^2.6.10",
     "axios": "^1.7.2",
     "babel-core": "^6.26.3",
@@ -20,10 +21,12 @@
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
     "expres": "^0.0.5",
+    "express": "^4.19.2",
     "express-graphql": "^0.12.0",
     "graphql-date": "^1.0.3",
     "html-webpack-plugin": "^5.6.0",
     "lodash": "^4.17.21",
+    "mongoose": "^8.4.4",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
