--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@apollo/client": "^3.10.8",
+    "@babel/preset-react": "^7.24.7",
     "apollo-client": "^2.6.10",
     "axios": "^1.7.2",
     "babel-core": "^6.26.3",
@@ -20,6 +21,7 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "expres": "^0.0.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
