--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "apollo-client": "^2.6.10",
     "axios": "^1.7.2",
     "babel-core": "^6.26.3",
-    "babel-loader": "^9.1.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.20.2",
@@ -25,6 +24,7 @@
     "expres": "^0.0.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
+    "graphql": "^15.9.0",
     "graphql-date": "^1.0.3",
     "html-webpack-plugin": "^5.6.0",
     "lodash": "^4.17.21",
@@ -33,9 +33,15 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router": "^6.24.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.92.1",
     "webpack-dev-middleware": "^7.2.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-loader": "^9.1.3"
   }
 }
