--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/client": "^3.10.8",
     "@babel/preset-react": "^7.24.7",
+    "apollo-boost": "^0.4.9",
     "apollo-client": "^2.6.10",
     "axios": "^1.7.2",
     "babel-core": "^6.26.3",
@@ -26,6 +27,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.9.0",
     "graphql-date": "^1.0.3",
+    "graphql-tag": "^2.12.6",
     "html-webpack-plugin": "^5.6.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.4.4",
