--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "graphql": "^15.9.0",
     "graphql-date": "^1.0.3",
     "graphql-tag": "^2.12.6",
-    "html-webpack-plugin": "^5.6.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.4.4",
     "nodemon": "^3.1.4",
@@ -36,15 +35,19 @@
     "passport-local": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-router": "^6.24.0",
     "react-router-dom": "^6.24.1",
     "style-loader": "^4.0.0",
-    "webpack": "^5.92.1",
     "webpack-dev-middleware": "^7.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
-    "babel-loader": "^9.1.3"
+    "babel-loader": "^9.1.3",
+    "html-webpack-plugin": "^5.6.0",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
