--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js --ignore client"
+    "start": "webpack-dev-server --mode development",
+    "dev": "nodemon index.js --ignore client",
+    "build-webpack": "webpack --mode development"
   },
   "keywords": [],
   "author": "",
@@ -39,6 +41,7 @@
     "react-router": "^6.24.0",
     "react-router-dom": "^6.24.1",
     "style-loader": "^4.0.0",
+    "webpack": "^5.93.0",
     "webpack-dev-middleware": "^7.2.1"
   },
   "devDependencies": {
@@ -46,7 +49,6 @@
     "@babel/preset-env": "^7.24.7",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
-    "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   }
