--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode development",
     "start": "webpack-dev-server --mode development",
-    "dev": "nodemon index.js --ignore client",
-    "build-webpack": "webpack --mode development"
+    "dev": "nodemon index.js --ignore client"
   },
   "keywords": [],
   "author": "",
@@ -40,7 +40,6 @@
     "react-hook-form": "^7.52.1",
     "react-router": "^6.24.0",
     "react-router-dom": "^6.24.1",
-    "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
     "webpack-dev-middleware": "^7.2.1"
   },
@@ -48,7 +47,9 @@
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^4.0.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   }
